--- a/index.html
+++ b/index.html
@@ -133,55 +133,5 @@ state = "start";
 }
 function gameLoop() {
 ctx.clearRect(0, 0, 200, 200);
-ctx.fillRect(this.position.x, this.position.y, 10, 10);
-
-ctx.fillRect(this.position2.x, this.position2.y, 10, 10);
-
-if (state == "stop") {
-
-this.position.x += 0;
-this.position.y += 0;
-
-this.position2.x += 0;
-this.position2.y += 0;
-
-}
-if (state == "start") {
-
-if (this.position.x !== 200 || this.position2.x !== 0){
-
-this.position.x += 1;
-
-this.position2.x -= 1;
-
-}
-
-if (this.position.y !== 190 || this.position2.y !== 190)
-{
-
-this.position.y += 1
-this.position2.y += 1;
-
-}
-
-if (this.position.x == 200 || this.position2.x == 0) {
-this.position.x = 0;
-this.position2.x = 190;
-}
-if (this.position.y == 190 || this.position2.y == 190) {
-this.position.y = 0;
-this.position2.y = 0;
-}
-
-}
-requestAnimationFrame(gameLoop);
-
-}
-gameLoop();
-requestAnimationFrame(gameLoop);
-<\/script>
-</body>
-</html> </script>
-
-</body>
-</html>
+<\script>
+<\body>
