--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ state = "start";
 }
 function gameLoop() {
 ctx.clearRect(0, 0, 200, 200);
+ctx.fillStyle = "#000000"
 ctx.fillRect(this.position.x, this.position.y, 10, 10);
 
 ctx.fillRect(this.position2.x, this.position2.y, 10, 10);
