--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ requestAnimationFrame(gameLoop);
 }
 gameLoop();
 requestAnimationFrame(gameLoop);
-</script>
+<\script>
 <button onclick="stop()" class="button button1">Stop</button>
 <button onclick="start()"class="button button2">Start</button>
 <\body>
