--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ function stop() {
 state = "stop";
 }
   function check(event) {
-  if (event.key == "g"){
+  if (event.key === "g"){
  start(); 
   }
-    elif (event.key == "s") {
+    elif (event.key === "s") {
     stop();
     }
   }
@@ -49,7 +49,7 @@ ctx.fillRect(this.position.x, this.position.y, 10, 10);
 
 ctx.fillRect(this.position2.x, this.position2.y, 10, 10);
 
-if (state == "stop") {
+if (state === "stop") {
 
 this.position.x += 0;
 this.position.y += 0;
@@ -58,7 +58,7 @@ this.position2.x += 0;
 this.position2.y += 0;
 
 }
-if (state == "start") {
+if (state === "start") {
 
 if (this.position.x !== 200 || this.position2.x !== 0){
 
@@ -76,11 +76,11 @@ this.position2.y += 1;
 
 }
 
-if (this.position.x == 200 || this.position2.x == 0) {
+if (this.position.x === 200 || this.position2.x === 0) {
 this.position.x = 0;
 this.position2.x = 190;
 }
-if (this.position.y == 190 || this.position2.y == 190) {
+if (this.position.y === 190 || this.position2.y === 190) {
 this.position.y = 0;
 this.position2.y = 0;
 }
